Add hover effects and icons to resource sections

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -69,7 +69,7 @@
                     <h2>Community Support Resources</h2>
                     
                     <!-- Food Banks Section -->
-                    <div class="resource-category">
+                    <div class="resource-category food-banks">
                         <h3>🍖 Food Banks</h3>
                         <p>Access free food supplies through local food banks and community pantries. These organizations offer groceries and meals to those in need and often require minimal registration.</p>
                         <div id="food-bank-results" class="resource-list">
@@ -78,7 +78,7 @@
                     </div>
 
                     <!-- Housing Assistance Section -->
-                    <div class="resource-category">
+                    <div class="resource-category housing">
                         <h3>🏠 Housing Assistance</h3>
                         <p>Find emergency shelters, transitional housing, and affordable housing programs designed to support individuals facing housing insecurity.</p>
                         <div id="housing-results" class="resource-list">
@@ -87,7 +87,7 @@
                     </div>
 
                     <!-- Community Health Centers Section -->
-                    <div class="resource-category">
+                    <div class="resource-category health">
                         <h3>🏥 Community Health Centers</h3>
                         <p>Receive basic healthcare, preventative services, and mental health support at community health centers offering low-cost or free care.</p>
                         <div id="health-results" class="resource-list">
@@ -96,7 +96,7 @@
                     </div>
 
                     <!-- Job Training Centers Section -->
-                    <div class="resource-category">
+                    <div class="resource-category training">
                         <h3>💼 Job Training Centers</h3>
                         <p>Discover job training programs and skill development workshops to help improve employment opportunities.</p>
                         <div id="training-results" class="resource-list">
