Updated styles and resources pages

--- a/index.html
+++ b/index.html
@@ -35,28 +35,44 @@
             </div>
 
             <div class="features-grid">
-                <!-- Resource Finder Card -->
+                <!-- Food Assistance Card -->
                 <div class="feature-card">
-                    <div class="feature-icon">🔍</div>
-                    <h2>Resource Finder</h2>
-                    <p>Discover local resources and services in your area</p>
-                    <a href="pages/resources.html" class="feature-link">Find Resources</a>
+                    <div class="feature-icon">🍖</div>
+                    <h2>Food Assistance</h2>
+                    <p>Find local food banks and pantries to access free groceries and meals.</p>
+                    <a href="pages/resources.html#food-bank-results" class="feature-link">See Food Resources</a>
                 </div>
 
-                <!-- Job Recommendations Card -->
+                <!-- Job & Training Card -->
                 <div class="feature-card">
                     <div class="feature-icon">💼</div>
-                    <h2>Job Recommendations</h2>
-                    <p>Get personalized job recommendations based on your skills</p>
-                    <a href="pages/jobs.html" class="feature-link">Find Jobs</a>
+                    <h2>Job & Training</h2>
+                    <p>Discover job opportunities and skill development programs near you.</p>
+                    <a href="pages/resources.html#training-results" class="feature-link">See Jobs & Training</a>
                 </div>
 
-                <!-- Community Card -->
+                <!-- Clothing Assistance Card -->
+                <div class="feature-card">
+                    <div class="feature-icon">👕</div>
+                    <h2>Clothing Assistance</h2>
+                    <p>Find nearby stores and donation centers like Goodwill to get affordable clothing.</p>
+                    <a href="pages/resources.html#clothing-results" class="feature-link">See Clothing Resources</a>
+                </div>
+
+                <!-- Housing Assistance Card -->
+                <div class="feature-card">
+                    <div class="feature-icon">🏠</div>
+                    <h2>Housing Assistance</h2>
+                    <p>Apply for low-income housing and find support for housing needs.</p>
+                    <a href="pages/resources.html#housing-results" class="feature-link">Apply for Housing</a>
+                </div>
+
+                <!-- Community Chat Card -->
                 <div class="feature-card">
                     <div class="feature-icon">👥</div>
-                    <h2>Community</h2>
+                    <h2>Community Chat</h2>
                     <p>Connect with others and share your experiences</p>
-                    <a href="pages/community.html" class="feature-link">Join Community</a>
+                    <a href="pages/community.html" class="feature-link">Join Community Chat</a>
                 </div>
 
                 <!-- Translation Assistant Card -->
