Updated styles and index layout

--- a/index.html
+++ b/index.html
@@ -43,12 +43,20 @@
                     <a href="pages/resources.html#food-bank-results" class="feature-link">See Food Resources</a>
                 </div>
 
-                <!-- Job & Training Card -->
+                <!-- Housing Assistance Card -->
                 <div class="feature-card">
-                    <div class="feature-icon">💼</div>
-                    <h2>Job & Training</h2>
-                    <p>Discover job opportunities and skill development programs near you.</p>
-                    <a href="pages/resources.html#training-results" class="feature-link">See Jobs & Training</a>
+                    <div class="feature-icon">🏠</div>
+                    <h2>Housing Assistance</h2>
+                    <p>Apply for low-income housing and find support for housing needs.</p>
+                    <a href="pages/resources.html#housing-results" class="feature-link">Apply for Housing</a>
+                </div>
+
+                <!-- Health Services Card -->
+                <div class="feature-card">
+                    <div class="feature-icon">🏥</div>
+                    <h2>Health Services</h2>
+                    <p>Find nearby clinics, hospitals, and make appointments.</p>
+                    <a href="pages/resources.html#health-results" class="feature-link">See Health Resources</a>
                 </div>
 
                 <!-- Clothing Assistance Card -->
@@ -59,20 +67,20 @@
                     <a href="pages/resources.html#clothing-results" class="feature-link">See Clothing Resources</a>
                 </div>
 
-                <!-- Housing Assistance Card -->
+                <!-- Job & Training Card -->
                 <div class="feature-card">
-                    <div class="feature-icon">🏠</div>
-                    <h2>Housing Assistance</h2>
-                    <p>Apply for low-income housing and find support for housing needs.</p>
-                    <a href="pages/resources.html#housing-results" class="feature-link">Apply for Housing</a>
+                    <div class="feature-icon">💼</div>
+                    <h2>Job & Training</h2>
+                    <p>Discover job opportunities and skill development programs near you.</p>
+                    <a href="pages/resources.html#training-results" class="feature-link">See Jobs & Training</a>
                 </div>
 
-                <!-- Community Chat Card -->
+                <!-- Chat Card -->
                 <div class="feature-card">
                     <div class="feature-icon">👥</div>
-                    <h2>Community Chat</h2>
+                    <h2>Chat</h2>
                     <p>Connect with others and share your experiences</p>
-                    <a href="pages/community.html" class="feature-link">Join Community Chat</a>
+                    <a href="pages/community.html" class="feature-link">Join Chat</a>
                 </div>
 
                 <!-- Translation Assistant Card -->
